--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-# Ignore configuration files that may contain sensitive information.
-sites/*/*settings*.php
+# Ignore emacs backup files...
+*~
+# Ignore all hidden files
+.*
 
+# Don't ignore any .htaccess files
+!.htaccess
+
+# Ignore configuration files that may contain sensitive information.
+sites/*/settings.php
+
+# Ignore paths that contain user-generated content.
+sites/*/files
+sites/*/private
+robots.txt
